deploy: rjourdan/source_blog@8a62c8e134c6ae9c92cb2bc10e4b437a2e30cf21

--- a/kanban-get-more-things-done/index.html
+++ b/kanban-get-more-things-done/index.html
@@ -242,5 +242,6 @@ A bit more than 3 years ago when I took the responsibility for a large region wi
 
 <script src="/js/mediumish.js"></script>
 
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "41fec0b311d0416d9d40333187ce6b34"}'></script>
     </body>
 </html>
