--- a/network-automation-how-to-start/index.html
+++ b/network-automation-how-to-start/index.html
@@ -266,5 +266,6 @@ I don&rsquo;t talk much of my work in this blog and won&rsquo;t go in the detail
 
 <script src="/js/mediumish.js"></script>
 
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "41fec0b311d0416d9d40333187ce6b34"}'></script>
     </body>
 </html>
