--- a/serverlessconf-18-in-san-francisco-day-one/index.html
+++ b/serverlessconf-18-in-san-francisco-day-one/index.html
@@ -268,5 +268,6 @@ Serverless The creation of an Alexa skill in 2016 was this aha moment I discover
 
 <script src="/js/mediumish.js"></script>
 
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "41fec0b311d0416d9d40333187ce6b34"}'></script>
     </body>
 </html>
