--- a/serverlessconf-18-in-san-francisco-day-two/index.html
+++ b/serverlessconf-18-in-san-francisco-day-two/index.html
@@ -223,5 +223,6 @@ It started very well with a passionate speaker: Simon Wardley (@swardley), who p
 
 <script src="/js/mediumish.js"></script>
 
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "41fec0b311d0416d9d40333187ce6b34"}'></script>
     </body>
 </html>
