--- a/continous-learning/index.html
+++ b/continous-learning/index.html
@@ -262,5 +262,6 @@ Lean was coined from a book written by James P." />
 
 <script src="/js/mediumish.js"></script>
 
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "41fec0b311d0416d9d40333187ce6b34"}'></script>
     </body>
 </html>
