deploy: rjourdan/source_blog@a5b4ddae934bb9f64c56ef3e64af3de479e10c30

--- a/aws-container-a2z-intro/index.html
+++ b/aws-container-a2z-intro/index.html
@@ -141,7 +141,7 @@ I have been meaning to write a series of blog posts about building applications 
                 Apr 28, 2021
                 <i class="far fa-clock clock"></i>
                 
-              5 min read
+              6 min read
               
               </span>
             </div>
@@ -198,7 +198,11 @@ I have been meaning to write a series of blog posts about building applications 
 <h4 id="containers-but-not-only"><strong>Containers but not only</strong></h4>
 <p>As we build a Cloud Native Application, we will need other adjacent technologies to containers: observability, service mesh, databases&hellip;
 Again, the goal is to build something close to reality.</p>
-<h2 id="the-journey-of-a-thousand-miles-begins-with-a-single-step"><em>The journey of a thousand miles begins with a single step</em></h2>
+<h3 id="the-application"><strong>The application</strong></h3>
+<p>As said earlier, we want to build a logistic app. More precisely, we aim at reinventing the delivery of goods in the industry. This application will enable customers to ship packages and track their delivery. We will have a fleet of vehicles operated by the company but also a fleet of ride-share car drivers that we will leverage to have more capilarity. We will use maps with real-time tracking thanks to IoT technologies. We will offer a web gui and APIs as well as a mobile app for the drivers.</p>
+<h3 id="ready-for-high-scale"><strong>Ready for high-scale</strong></h3>
+<p>As we intend to go big and be successful with our business intiative, we need the application (and the infrastructure) to scale to meet the demand. We will build a resilient infrastructure that can scale. We will stress test the application to validate it works as expected.</p>
+<h2 id="the-journey-of-a-thousand-miles-begins-with-a-single-step">The journey of a thousand miles begins with a single step</h2>
 <p>This is the beginning of an exciting exploration in the Cloud Native world. I hope you will learn interesting things - I will for sure. I am looking forward to our discussions. See you soon to start with <a href="https://aws.amazon.com/lightsail/">Amazon Lightsail</a>.</p>
 
         </div>
