deploy: rjourdan/source_blog@6665e443f7f189d884b22f0b748df134aa5a8c5a

--- a/career-advice-and-the-need-for-mentoring/index.html
+++ b/career-advice-and-the-need-for-mentoring/index.html
@@ -233,7 +233,7 @@ At the ServerlessConf this week, during the lunch break, one young guy approache
                 &copy; Copyright Romain Jourdan - All rights reserved
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">
-
+                <a href="https://rjourdan.com/disclaimer.html">Disclaimer</a>
             </div>
         </div>
     </div>
