--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ Diversity is a word we are hearing more and more in the Enterprise world as well
                 &copy; Copyright Romain Jourdan - All rights reserved
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">
-
+                <a href="https://rjourdan.com/disclaimer.html">Disclaimer</a>
             </div>
         </div>
     </div>
