--- a/aws-container-a2z-intro/index.html
+++ b/aws-container-a2z-intro/index.html
@@ -258,7 +258,7 @@ Again, the goal is to build something close to reality.</p>
                 &copy; Copyright Romain Jourdan - All rights reserved
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">
-
+                <a href="https://rjourdan.com/disclaimer.html">Disclaimer</a>
             </div>
         </div>
     </div>
