--- a/continous-learning/index.html
+++ b/continous-learning/index.html
@@ -245,7 +245,7 @@ Lean was coined from a book written by James P." />
                 &copy; Copyright Romain Jourdan - All rights reserved
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">
-
+                <a href="https://rjourdan.com/disclaimer.html">Disclaimer</a>
             </div>
         </div>
     </div>
