--- a/kanban-get-more-things-done/index.html
+++ b/kanban-get-more-things-done/index.html
@@ -225,7 +225,7 @@ A bit more than 3 years ago when I took the responsibility for a large region wi
                 &copy; Copyright Romain Jourdan - All rights reserved
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">
-
+                <a href="https://rjourdan.com/disclaimer.html">Disclaimer</a>
             </div>
         </div>
     </div>
