--- a/network-automation-how-to-start/index.html
+++ b/network-automation-how-to-start/index.html
@@ -249,7 +249,7 @@ I don&rsquo;t talk much of my work in this blog and won&rsquo;t go in the detail
                 &copy; Copyright Romain Jourdan - All rights reserved
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">
-
+                <a href="https://rjourdan.com/disclaimer.html">Disclaimer</a>
             </div>
         </div>
     </div>
