--- a/serverlessconf-18-in-san-francisco-day-two/index.html
+++ b/serverlessconf-18-in-san-francisco-day-two/index.html
@@ -206,7 +206,7 @@ It started very well with a passionate speaker: Simon Wardley (@swardley), who p
                 &copy; Copyright Romain Jourdan - All rights reserved
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">
-
+                <a href="https://rjourdan.com/disclaimer.html">Disclaimer</a>
             </div>
         </div>
     </div>
