--- a/pi-aws-vpc/index.html
+++ b/pi-aws-vpc/index.html
@@ -245,10 +245,21 @@ As we know, packets never lie so let&rsquo;s take a capture while the same ping 
 There are two things of interest. We can see traffic going in both directions and it seems that NAT Traversal (ipsec-nat-t) is enabled. So the tunnels seem fine.</p>
 <p>Let&rsquo;s now look into the tunnels to understand what&rsquo;s going on. The ping still runs in the background.
 <img src="images/capture-tunnel.png" alt="Capture Tunnel">
-We see that traffic goes in one direction only. But the source IP address is not what I expected. It is the Tunnel1 interface&rsquo;s IP and in fact, it does make sense. However, the VPC network has no route to 169.254.70.58.
-Since, we enabled routing during the configuration with <code> net.ipv4.ip_forward = 1</code> in /etc/sysctl.conf (documented in the configuration file), let&rsquo;s test from another computer in the home LAN. This will confirm that our Pi is well connected via VPN to our VPC. I added a static route on my Mac to point towards the Pi for traffic destined to my AWS VPC: <code>sudo route -n add -net 10.155.0.0/24 10.0.1.69</code>.</p>
+We see that traffic goes in one direction only. But the source IP address is not what we would expect. It is the Tunnel1 interface&rsquo;s IP and in fact, it does make sense. However, the VPC network has no route to 169.254.70.58.</p>
+<p>Since, we enabled routing during the configuration with <code> net.ipv4.ip_forward = 1</code> in /etc/sysctl.conf (documented in the configuration file), let&rsquo;s test from another computer in our home LAN. This will confirm that our Pi is well connected via VPN to our VPC. I added a static route on my Mac to point towards the Pi for traffic destined to my AWS VPC: <code>sudo route -n add -net 10.155.0.0/24 10.0.1.69</code>.</p>
 <p><img src="images/ping-from-mac.png" alt="ping from Mac">
-The ping shows that the end-to-end connectivity is working and the traceroute confirms traffic is routed via the Pi. So we have to deal with the internal routing of the Pi to fix our problem now. On a traditional router, we would create a new loopback interface with an IP address in the same range than the LAN and form the VPN from that interface. To solve our problem, I am going to run a container on top the Pi and it will be my gateway to the cloud.</p>
+The ping shows that the end-to-end connectivity is working and the traceroute confirms traffic is routed via the Pi. So we have to deal with the internal routing of the Pi to fix our problem now. On a traditional router, we would create a new loopback interface with an IP address in the same range than the LAN and form the VPN from that interface. In this case, I&rsquo;d like to try another approach -more elegant from my point of view-, we are going to run a container on top of the Pi and it will be our gateway to the cloud.</p>
+<p>If you have not already installed Docker on your Raspberry Pi, you can follow this <a href="https://pimylifeup.com/raspberry-pi-docker/">tutorial</a>.</p>
+<p>We are going to reuse the configuration files that were edited/created earlier and change the IP address with the one we will assign to the container. I created a new directory to save all the files we need:</p>
+<p><code>mkdir strongswan_files</code></p>
+<p><code>sudo cp /etc/ipsec.conf strongswan_files/</code></p>
+<p><code>sudo cp /etc/ipsec.secrets strongswan_files/</code></p>
+<p><code>sudo cp /etc/sysctl.conf strongswan_files/</code></p>
+<p><code>sudo cp /etc/ipsec.d/aws-updown.sh strongswan_files/</code></p>
+<p><code>sudo cp /etc/strongswan.d/charon.conf strongswan_files/</code></p>
+<p><code>sudo chown pi strongswan_files/*</code> &lt;&ndash; all files now belong to the user pi so we can edit them.</p>
+<script type="application/javascript" src="https://gist.github.com/rjourdan/17d4d0bcc03ae74b3607b686933804b3.js"></script>
+
 
         </div>
 
