--- a/pi-aws-vpc/index.html
+++ b/pi-aws-vpc/index.html
@@ -141,7 +141,7 @@ In a recent discussion with a colleague (in fact few months back, I have been sl
                 Apr 30, 2021
                 <i class="far fa-clock clock"></i>
                 
-              8 min read
+              9 min read
               
               </span>
             </div>
@@ -259,6 +259,16 @@ The ping shows that the end-to-end connectivity is working and the traceroute co
 <p><code>sudo cp /etc/strongswan.d/charon.conf strongswan_files/</code></p>
 <p><code>sudo chown pi strongswan_files/*</code> &lt;&ndash; all files now belong to the user pi so we can edit them.</p>
 <script type="application/javascript" src="https://gist.github.com/rjourdan/17d4d0bcc03ae74b3607b686933804b3.js"></script>
+
+<script type="application/javascript" src="https://gist.github.com/rjourdan/ff163598eb880a5dc142a85fc4f999d8.js"></script>
+
+<script type="application/javascript" src="https://gist.github.com/rjourdan/391b6e59f7e1fe817e1d656c676ccc5c.js"></script>
+
+<script type="application/javascript" src="https://gist.github.com/rjourdan/bf420c67f8b0c7338397228e89da5b35.js"></script>
+
+<p>My system (Raspberry Pi 4) is 32bit so I have downloaded the Ubuntu image accordlingy: <code>docker pull arm32v7/ubuntu:18.04</code>.</p>
+<p>I still want my Raspberry to be a gateway to the cloud for my LAN so I want to bridge it on my home network. As per <a href="https://docs.docker.com/network/network-tutorial-macvlan/">Docker documentation</a>, <em>you can use the macvlan network driver to assign a MAC address to each container’s virtual network interface, making it appear to be a physical network interface directly connected to the physical network.</em></p>
+<script type="application/javascript" src="https://gist.github.com/rjourdan/29755a5dd741fb4e89d210286d5a69f6.js"></script>
 
 
         </div>
