deploy: rjourdan/source_blog@91024f3e5f1fe419400ef648a28a972b27bd600a

--- a/aws-container-a2z-step1/index.html
+++ b/aws-container-a2z-step1/index.html
@@ -159,7 +159,8 @@ Welcome back to the AWS Containers a2z blog series! We discussed in the introduc
 
         
         <div class="article-post">
-          <p><img src="cover.jpg" alt="AWS Containers a2z!">(Photo by <!-- raw HTML omitted -->Bernd Dittrich<!-- raw HTML omitted --> on <!-- raw HTML omitted -->Unsplash<!-- raw HTML omitted -->)</p>
+          <p><img src="cover.jpg" alt="AWS Containers a2z!"></p>
+<p>(Photo by <!-- raw HTML omitted -->Bernd Dittrich<!-- raw HTML omitted --> on <!-- raw HTML omitted -->Unsplash<!-- raw HTML omitted -->)</p>
 <p>Welcome back to the AWS Containers a2z blog series! We discussed in the <a href="https://rjourdan.com/aws-container-a2z-intro/">introduction</a> about our goals and how we will get there. We are going to build a Cloud Native application using AWS Container services. This application will be as realistic as possible, not your standard <code>'hello-world'</code>. As we are talking about containers, we are going to build a logistic app. This logistic app will have location-based capabilities and we use <a href="https://aws.amazon.com/location/">Amazon Location Service</a> that was announced at Re:Invent 2020.
 In this first episode of the saga, as we are experimenting with containers and Location Service, we are going to leverage <a href="https://aws.amazon.com/lightsail/">Amazon Lightsail</a> to run a container in the Cloud.</p>
 <h3 id="amazon-lightsail">Amazon Lightsail</h3>
